--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  provider: ^6.0.6
   flutter_svg: ^2.0.10+1
   firebase_core: ^2.27.1
   firebase_auth: ^4.17.9
+  dropdown_search: ^5.0.6
+  dropdown_button2: ^2.3.9
+  cloud_firestore: ^4.15.9
+  firebase_storage: ^11.6.10
+  firebase_database: ^10.4.10
+  random_string: ^2.3.1
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
